<resources>
    <string name="app_name">DeCatas</string>
    <string name="title_activity_login" translatable="false">Login</string>
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_sign_in">Iniciar sesión o registrarse</string>
    <string name="action_sign_in_short">Iniciar sesión</string>
    <string name="welcome">Bienvenido!</string>
    <string name="invalid_username">El usuario no es correcto</string>
    <string name="invalid_password">La contraseña no es correcta</string>
    <string name="login_failed">Usuario o contraseña están equivocados</string>
    <string name="user">Usuario</string>
    <string name="ask_new_user">¿No tienes usuario?</string>
    <string name="empty_login_input">El usuario o la contraseña están vacío</string>
    <string name="title_activity_new_user" translatable="false">Nuevo Usuario</string>
    <string name="name">Nombre</string>
    <string name="repeat_password">Repita su contraseña</string>
    <string name="create_user">Crear usuario</string>
    <string name="empty_user">Escribe un nombre de usuario</string>
    <string name="empty_name">Escribe tu nombre</string>
    <string name="user_exists">El usuario ya existe</string>
    <string name="empty_pass">Escribe una contraseña</string>
    <string name="password_not_secure">La contraseña no es segura</string>
    <string name="different_pass">Las contraseñas no coinciden</string>
    <string name="title_activity_instrucciones" translatable="false">Instrucciones</string>
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next">Siguiente</string>
    <string name="previous">Anterior</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="instructions">Instrucciones</string>
    <string name="title_activity_user" translatable="false">User</string>
    <string name="labelUsuario">Usuario:</string>
    <string name="labelNombre">Nombre:</string>
    <string name="labelCatas">Catas:</string>
    <string name="labelCervezas">Cervezas:</string>
    <string name="labelAmigos">Amigos:</string>
    <string name="new_beer">Nueva cerveza</string>
    <string name="title_activity_nueva__cerveza" translatable="false">Nueva Cerveza</string>
    <string name="beer_name">Nombre de la cerveza</string>
    <string name="aroma">Aroma</string>
    <string name="sabor">Sabor</string>
    <string name="apariencia">Apariencia</string>
    <string name="cuerpo">Cuerpo</string>
    <string name="botellin">Botellin</string>
    <string name="save">Guardar</string>
    <string name="title_activity_mis_cervezas" translatable="false">Mis Cervezas</string>
    <string name="title_activity_nueva__cata" translatable="false">Nueva Cata</string>
    <string name="create_beer_tasting">Crear cata</string>
    <string name="new_beer_tasting">Nueva cata</string>
    <string name="title_activity_cata" translatable="false">Cata</string>
    <string name="participants">Participantes</string>
    <string name="beers">Cervezas</string>
    <string name="no_beers">No hay cervezas registradas</string>
    <string name="join_beer_tasting">Unirse a cata</string>
    <string name="title_activity_buscar__cata" translatable="false">Buscar_Cata</string>
    <string name="search">Buscar</string>
    <string name="my_beer_tastings">Mis catas</string>
    <string name="title_activity_mis__catas" translatable="false">Mis Catas</string>
    <string name="date">Fecha</string>
    <string name="en_curso">En Curso</string>
    <string name="admin">Admin</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="title_activity_valorar__cerveza" translatable="false">Valorar Cerveza</string>
    <string name="valorar_cerveza">Valorar cerveza</string>
    <string name="my_beers">Mis cervezas</string>
    <string name="join">Unirse</string>
    <string name="enter_beer_tasting_password">Introduce la contraseña de la cata</string>
    <string name="cancel">Cancelar</string>
    <string name="error_join_beer_tasting">No se ha podido unir a la cata</string>
    <string name="ok">OK</string>
    <string name="no_beer_tasting_found">No se han encontrado coincidencias</string>
    <string name="enter_beer_tasting_name">Introduce un nombre de cata</string>
    <string name="question_delete_cata">¿Está seguro que quiere borrar la cata?</string>
    <string name="delete_">Borrar...</string>
    <string name="question_exit_user">¿Está seguro que quiere salir de DeCatas?</string>
    <string name="question_exit_beer_tasting">¿Está seguro que quiere salir de la cata? Puedes volver en cualquier momento si sigue en curso</string>
    <string name="title_activity_mis__amigos" translatable="false">Mis_Amigos</string>
    <string name="my_friends">Mis Amigos</string>
    <string name="add_friend">Añadir amigo</string>
    <string name="title_activity_anyadir__amigo" translatable="false">Anyadir_Amigo</string>
    <string name="no_friends">No has agregado ningún amigo</string>
    <string name="no_users_found">No se han encontrado usuarios</string>
    <string name="friend_request_sent">Solicitud enviada con éxito</string>
    <string name="error_sending_friend_request">No se pudo envia la solicitud</string>
    <string name="request_repeated">La solicitud está a la espera de confirmación</string>
    <string name="add">Añadir</string>
    <string name="exist_request">Tienes solicitudes de amistad pendientes!</string>
    <string name="title_activity_solicitudes">Solicitudes</string>
    <string name="request_accept">La solicitud se aceptó con éxito</string>
    <string name="request_accept_error">No se pudo aceptar la solicitud</string>
    <string name="request_decline">La solicitud se rechazó con éxito</string>
    <string name="decline_request_error">No se pudo rechazar la solicitud</string>
    <string name="empty_beer_tasting">No te has unido a ninguna cata</string>
    <string name="no_beers_found">No has valorado ninguna cerveza</string>
    <string name="delete_beer_from_beer_tasting">¿Está seguro que quiere borrar esta cerveza de la cata?</string>
    <string name="end_beer_tasting">Terminar cata</string>
    <string name="beer_tasting_finished">La cata ya ha finalizado</string>
    <string name="question_end_beer_tasting">¿Estás seguro que quieres finalizar la cata de cerveza?</string>
    <string name="error_ending_beer_tasting">No se pudo finalizar la cata</string>
    <string name="beer_tasting_ended_successfully">La cata se finalizó con éxito</string>
    <string name="beer_tasting_is_finished">Esta cata está terminada</string>
    <string name="title_activity_resultados">Resultados</string>
    <string name="best_beers">Mejores cervezas de media</string>
    <string name="no_values_found">No existen valoraciones todavía</string>
    <string name="no_beers_in_beer_tasting">No se han añadido cervezas a la cata</string>
    <string name="best_beers_smell">Mejores cervezas por aroma</string>
    <string name="best_beers_aparience">Mejores cervezas por apariencia</string>
    <string name="best_beers_taste">Mejores cervezas por sabor</string>
    <string name="best_beers_body">Mejores cervezas por cuerpo</string>
    <string name="best_beers_bottle">Mejores cervezas por botellín</string>
    <string name="best_judge_average">Mejor juez de media</string>
    <string name="best_judge_smell">Mejor juez por aroma</string>
    <string name="best_judge_appearance">Mejor juez por apariencia</string>
    <string name="best_judge_taste">Mejor juez por sabor</string>
    <string name="best_judge_body">Mejor juez por cuerpo</string>
    <string name="best_judge_bottle">Mejor juez por botellín</string>
    <string name="title_activity_ver__amigos">Ver Amigos</string>
    <string name="instructions_title">¿Cómo se valora una cerveza?</string>
    <string name="instructions_1">Para catar una cerveza, debes apreciar 4 variables fundamentales:</string>
    <string name="attributes">Aroma    Apariencia    Sabor    Cuerpo</string>
    <string name="apariencia_1">Para analizar la apariencia de una cerveza puedes analizar:</string>
    <string name="aroma_1">El aroma depende tanto del tipo, la cantidad y la proporción de malta y lúpulo que se use en la elaboración, así como de otros elementos que se añaden tras la fermentación para dar otro tipo de cualidades organolépticas. Así deberás estar atento a:</string>
    <string name="taste_1">Para el sabor te recomendamos que disfrutes de un primer sorbo que acaricie todo el paladar. Ahí ya notarás las primeras cualidades de la cerveza, en el siguiente las confirmarás o descubrirás nuevas. Al igual que en la fase olfativa, al degustar la cerveza, los sabores que vas a notar dependen tanto del lúpulo como de la malta, o las frutas, especias,... que se añadan a la cerveza.</string>
    <string name="body_1">Deberás anotar las sensaciones que en el paladar ha dejado la cerveza. No todas las cervezas, por muy parecidas que sean en muchas de sus características, dejan la misma apreciación. Hay cervezas más gasificadas, otras son ácidas, otras amargas, otras son densas,... Por eso deberás apreciar:</string>
    <string name="bottle_1">Por último, para valorar el botellín puedes fijarte en su forma, en el diseño de las etiquetas, sus colores y formas,...</string>
    <string name="faq">Preguntas frecuentes</string>
    <string name="q_1">¿Cómo creo una cata nueva?</string>
    <string name="q_2">¿Cómo registro las valoraciones de una cerveza?</string>
    <string name="q_3">¿Qué es la media de una cerveza?</string>
    <string name="q_4">¿Cómo se calculan los resultados de una cata?</string>
    <string name="a_1">Para crear una cata hay que ir a Nueva Cata desde la página principal del usuario. A continuación se pide darle un nombre a la cata y una contraseña. Esta contraseña será utilizada por los demás usuarios para entrar a la cata. El administrador de la cata podrá ir añadiendo los nombres de las cervezas a valorar.</string>
    <string name="a_2">Para valorar una cerveza individualmente hay que ir a Nueva Cerveza desde la página principal del usuario. De esta forma se pueden añadir valoraciones sin necesidad de crear una cata específica.</string>
    <string name="a_4_1">Para el cálculo de la mejor cerveza de media se calcula la nota media de cada cerveza por cada persona de la cata. Si se calcula la nota media de estas medias anteriores se obtiene la nota media general de la cerveza. La tabla \"Mejores cervezas de media\" muestra estas medias ordenadas de mayor a menor.</string>
    <string name="a_4_2">Para el cálculo de la mejor cerveza según el atributo se calcula la media de valoración de todas las personas para ese atributo. La tabla \"Mejores cervezas por aroma/apariencia/etc.\" muestra estas medias ordenadas de mayor a menor</string>
    <string name="a_4_3">Para el cálculo del mejor juez de media se resta, para cada persona y cada cerveza, la media general de la cerveza a la media individual valorada por la persona. Esta diferencia se va acumulando. El mejor juez de media es la persona que tenga menos diferencia acumulada.</string>
    <string name="a_4_4">Para el cálculo del mejor juez por atributo se resta, para cada persona y cada cerveza, la media general de la cerveza para ese atributo a la valoracion de la persona para ese atributo. Esta diferencia se va acumulando. El mejor juez según el atributo es la persona que tenga menos diferencia acumulada.</string>
    <string name="a_3">La media de una cerveza es calculada a partir de sus diferentes valoraciones de sus atributos. Cada atributo cuenta igual para la media así que se usa una media aritmética.</string>
</resources>