<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="goToLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:text="@string/instructions_title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center|top"
                android:text="@string/instructions_1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center|top"
                android:text="@string/attributes"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bottle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="1"
                android:gravity="center|top"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/title_appearance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center|top"
                android:text="@string/apariencia"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/apariencia_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center|top"
                android:text="@string/apariencia_1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/appearance_attributes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center|top"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/title_smell"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center|top"
                android:text="@string/aroma"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/aroma_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:gravity="center|top"
                android:text="@string/aroma_1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/smell_attributes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center|top"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/title_taste"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center|top"
                android:text="@string/sabor"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/taste_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:gravity="center|top"
                android:text="@string/taste_1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/taste_attributes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center|top"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/title_body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center|top"
                android:text="@string/cuerpo"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/body_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:gravity="center|top"
                android:text="@string/body_1"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/body_attributes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center|top"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/title_bottle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center|top"
                android:text="@string/botellin"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/bottle_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="1"
                android:gravity="center|top"
                android:text="@string/bottle_1"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>