<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <ImageView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <TextView
        android:id="@+id/title"
        android:layout_width="410dp"
        android:layout_height="50dp"
        android:gravity="center|center_vertical"
        android:orientation="vertical"
        android:text="@string/valorar_cerveza"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/content" />

    <EditText
        android:id="@+id/inputName5"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_normal"
        android:ems="10"
        android:hint="@string/cuerpo"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName4" />

    <EditText
        android:id="@+id/inputName3"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_normal"
        android:ems="10"
        android:hint="@string/apariencia"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName2" />

    <EditText
        android:id="@+id/inputName4"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_normal"
        android:ems="10"
        android:hint="@string/sabor"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName3" />

    <EditText
        android:id="@+id/inputName2"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/input_normal"
        android:ems="10"
        android:hint="@string/aroma"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <EditText
        android:id="@+id/inputName6"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/input_normal"
        android:ems="10"
        android:hint="@string/botellin"
        android:inputType="textPersonName"
        android:paddingLeft="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName5" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/buttons"
        android:onClick="saveBeer"
        android:text="@string/save"
        app:layout_constraintEnd_toStartOf="@+id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputName6" />

    <Button
        android:id="@+id/button2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:background="@drawable/buttons"
        android:drawableTop="@drawable/ic_photo_foreground"
        android:onClick="dispatchTakePictureIntent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button"
        app:layout_constraintTop_toBottomOf="@+id/inputName6" />

</androidx.constraintlayout.widget.ConstraintLayout>